project/stage/semantic_tests/accept/while.ul
void main () {
    if (true) {
        while(gimmeFalse()) {
            println "unreachable loop";
        }
        println "Finished loop";
    } else {
        println "unreachable else block";
    }
}

boolean gimmeFalse() {
    return false;
}
