project/stage/semantic_tests/reject/bad_return_type3.ul
void main() {
}

void bar(int b) {
    return b;
}
